project images added

--- a/about.html
+++ b/about.html
@@ -72,12 +72,13 @@
 
   <!-- main -->
   <main class="w-full max-w-6xl mx-auto px-4 pt-10 flex-grow mb-10">
-    <h1 class="text-4xl font-bold text-center sm:mb-2 lg:mb-10">Our Team:</h1>
+    <h1 class="text-4xl font-bold text-center sm:mb-2 lg:mb-10 animate-fade-right animate-once animate-duration-2000">
+      Our Team:</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center p-10">
       <!-- Dubravka -->
       <div
-        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-2000">
         <figure class="w-full md:w-1/2 h-full">
           <img src="./images/dubravka.jpeg" alt="Dubravka Spoljaric" class="object-cover w-full h-full rounded-md" />
         </figure>
@@ -98,7 +99,7 @@
 
       <!-- Karla -->
       <div
-        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-2000">
         <figure class="w-full md:w-1/2 h-full">
           <img src="./images/karla.jpg" alt="Karla Lenard" class="object-cover w-full h-full rounded-md" />
         </figure>
@@ -118,12 +119,13 @@
       </div>
     </div>
 
-    <h1 class="text-4xl font-bold text-center mb-10 mt-10">Extended team:</h1>
+    <h1 class="text-4xl font-bold text-center mb-10 mt-10  animate-fade-right animate-once animate-duration-2000">
+      Extended team:</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-items-center p-10">
 
       <!-- Ivona -->
       <div
-        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-2000">
         <figure class="w-full md:w-1/2 h-full">
           <img src="./images/ivona.jpg" alt="Ivona Lenard" class="object-cover w-full h-full rounded-md" />
         </figure>
@@ -143,7 +145,7 @@
 
       <!-- Mia -->
       <div
-        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-1000">
+        class="card bg-base-100 shadow-md flex flex-col md:flex-row w-full max-w-xs sm:max-w-sm md:max-w-md lg:w-[500px] h-[500px] lg:h-60 overflow-hidden p-4 animate-fade-left animate-once animate-duration-2000">
         <figure class="w-full md:w-1/2 h-full">
           <img src="./images/mia.jpeg" alt="Mia Majstor" class="object-cover w-full h-full rounded-md" />
         </figure>
