--- a/projects.html
+++ b/projects.html
@@ -73,15 +73,16 @@
   <!-- main -->
   <main
     class="w-full max-w-6xl mx-auto px-4 pt-10 flex-grow grid grid-cols-1 md:grid-cols-2 gap-6 mb-5 animate-fade-right animate-duration-[1000ms] animate-ease-in">
-    <div class="flex flex-col items-center gap-6 md:gap-20 mt-0 lg:mt-20">
+    <div class="flex flex-col items-center gap-6 md:gap-20 mt-0  md:mt-10 lg:mt-20">
       <!-- image -->
-      <figure class="w-full md:w-auto flex justify-center">
+      <figure
+        class="w-full md:w-auto flex justify-center animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]">
         <img src="./images/design.svg" alt="projects" class="w-64 h-64 object-cover rounded-md" />
       </figure>
       <!-- text -->
       <h2
         class="text-5xl text-center md:text-left animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
-        Some of the projects we have been working on so far:
+        Some of the projects we have been working on:
       </h2>
     </div>
     <!-- PROJECT 1 -->
@@ -98,10 +99,13 @@
         </ul>
         <p class="mt-2 text-sm"><strong>Technologies:</strong> HTML, CSS, Bootstrap, JavaScript, PHP, Yii, MySQL</p>
       </div>
+      <!-- gallery -->
       <figure>
         <video src="../images/visualization_1.mp4" controls class="w-full"></video>
       </figure>
+
     </div>
+
 
     <!-- PROJECT 2-->
     <div class="card bg-base-100 shadow-sm">
@@ -116,9 +120,38 @@
         </ul>
         <p class="mt-2 text-sm"><strong>Technologies:</strong> HTML, CSS, Bootstrap, JavaScript, PHP, Yii, MySQL</p>
       </div>
-      <figure>
-        <video src="../images/visualization_1.mp4" controls class="w-full"></video>
-      </figure>
+
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="./images/dating site/datingsite_1.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="./images/dating site/datingsite_2.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="./images/dating site/datingsite_3.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="./images/dating site/datingsite_4.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <!-- PROJECT 3 -->
@@ -136,9 +169,25 @@
           <strong>Technologies:</strong> HTML, CSS, JavaScript, PHP, MySQL, Autodesk PHP SDK, PayPal
         </p>
       </div>
-      <figure>
-        <video src="../images/visualization_1.mp4" controls class="w-full"></video>
-      </figure>
+
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="./images/autodesk/autodesk_1.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="./images/autodesk/autodesk_2.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     </div>
 
     <!-- PROJECT 4 -->
@@ -155,9 +204,39 @@
         </ul>
         <p class="mt-2 text-sm"><strong>Technologies:</strong> Stripe PHP SDK</p>
       </div>
-      <figure>
-        <video src="../images/visualization_1.mp4" controls class="w-full"></video>
-      </figure>
+
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="./images/stripe/stripe_1.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="./images/stripe/stripe_2.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="./images/stripe/stripe_3.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="./images/stripe/stripe_3.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     </div>
 
     <!-- PROJECT 5 -->
@@ -172,9 +251,24 @@
         </ul>
         <p class="mt-2 text-sm"><strong>Technologies:</strong> Zammad API Client PHP</p>
       </div>
-      <figure>
-        <video src="../images/visualization_1.mp4" controls class="w-full"></video>
-      </figure>
+
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="./images/ticketing/zammad_1.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="./images/ticketing/zammad_2.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <!-- PROJECT 6 -->
@@ -191,9 +285,30 @@
           <strong>Technologies:</strong> React, ThreeJS, Node.js, Express, WebSockets, Google Places, Flightlab API
         </p>
       </div>
-      <figure>
-        <video src="../images/visualization_1.mp4" controls class="w-full"></video>
-      </figure>
+
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <video class="w-full" controls>
+            <source src="./images/multimedia show/artproject_1.mov" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <video class="w-full" controls>
+            <source src="./images/multimedia show/artproject_2.mov" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <!-- PROJECT 7 -->
