added images for animal game

--- a/projects.html
+++ b/projects.html
@@ -87,8 +87,8 @@
       <div class="card-body">
         <h2 class="card-title text-xl font-bold">
           Restaurant management web app
-          <a href="https://horizondev.netlify.app/restaurant" target="_blank"
-            class="text-blue-500 text-sm ml-2">[SHOWCASE]</a>
+          <!-- <a href="https://horizondev.netlify.app/restaurant" target="_blank"
+            class="text-blue-500 text-sm ml-2">[SHOWCASE]</a> -->
         </h2>
         <ul class="list-disc list-outside pl-5 mt-2">
           <li>Responsive web application for managing menu items, adding new items, translation to 5 languages</li>
@@ -253,6 +253,8 @@
       <div class="card-body">
         <h2 class="card-title text-xl font-bold">
           3D Model Rendering Platform
+          <a href=" https://aps.autodesk.com/developer/idea/viewer-app" target="_blank"
+            class="text-blue-500 text-sm ml-2">[VIEW]</a>
         </h2>
         <ul class="list-disc list-outside pl-5 mt-2">
           <li>Web app for rendering AutoCAD models with Autodesk SDK</li>
@@ -373,10 +375,13 @@
         </h2>
         <ul class="list-disc list-outside pl-5 mt-2">
           <li>Interactive 3D globe visualizing flight data via Flightlab API</li>
-          <li>Includes WebSocket chat and Google Places integration</li>
+          <li>Chat, flight search, data visualization, google places API to autocomplete users entries</li>
+          <li>Due to NDA details are not presented</li>
+          <li>Web socket based chat</li>
+          <li>Google places</li>
         </ul>
         <p class="mt-2 text-sm">
-          <strong>Technologies:</strong> React, ThreeJS, Node.js, Express, WebSockets, Google Places, Flightlab API
+          <strong>Technologies:</strong> React + ThreeJS, Node.js, JavaScript, Bootstrap, Express
         </p>
       </div>
       <div class="carousel w-full rounded-md">
@@ -650,46 +655,53 @@
       </div>
 
       <div class="carousel w-full rounded-md">
-        <div id="alphabet-slide1" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_1.png" class="w-full" />
+        <div id="animals-slide1" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_1.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#alphabet-slide4" class="btn btn-circle">❮</a>
-            <a href="#alphabet-slide2" class="btn btn-circle">❯</a>
+            <a href="#animals-slide4" class="btn btn-circle">❮</a>
+            <a href="#animals-slide2" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="alphabet-slide2" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_2.png" class="w-full" />
+        <div id="animals-slide2" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_2.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#alphabet-slide1" class="btn btn-circle">❮</a>
-            <a href="#alphabet-slide3" class="btn btn-circle">❯</a>
+            <a href="#animals-slide1" class="btn btn-circle">❮</a>
+            <a href="#animals-slide3" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="alphabet-slide3" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_3.png" class="w-full" />
+        <div id="animals-slide3" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_3.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#alphabet-slide2" class="btn btn-circle">❮</a>
-            <a href="#alphabet-slide4" class="btn btn-circle">❯</a>
+            <a href="#animals-slide2" class="btn btn-circle">❮</a>
+            <a href="#animals-slide4" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="alphabet-slide4" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_4.png" class="w-full" />
+        <div id="animals-slide4" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_4.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#alphabet-slide3" class="btn btn-circle">❮</a>
-            <a href="#alphabet-slide5" class="btn btn-circle">❯</a>
+            <a href="#animals-slide3" class="btn btn-circle">❮</a>
+            <a href="#animals-slide5" class="btn btn-circle">❯</a>
           </div>
         </div>
         <div id="alphabet-slide5" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_5.png" class="w-full" />
+          <img src="./images/animals game/animals_5.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
             <a href="#alphabet-slide4" class="btn btn-circle">❮</a>
             <a href="#alphabet-slide6" class="btn btn-circle">❯</a>
           </div>
         </div>
-        <div id="alphabet-slide6" class="carousel-item relative w-full">
-          <img src="./images/alphabet game/alphabet_6.png" class="w-full" />
+        <div id="animals-slide6" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_6.png" class="w-full" />
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#alphabet-slide5" class="btn btn-circle">❮</a>
-            <a href="#alphabet-slide1" class="btn btn-circle">❯</a>
+            <a href="#animals-slide5" class="btn btn-circle">❮</a>
+            <a href="#animals-slide7" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="animals-slide7" class="carousel-item relative w-full">
+          <img src="./images/animals game/animals_7.png" class="w-full" />
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#animals-slide6" class="btn btn-circle">❮</a>
+            <a href="#animals-slide1" class="btn btn-circle">❯</a>
           </div>
         </div>
       </div>
