--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
         Web Development
       </h2>
       <h2
-        class="text-base md:text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+        class="text-base md:text-3xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
         We specialize in building innovative web solutions, from subscription-based
         text-to-speech apps to advanced 3D rendering platforms. Whether you need a
         restaurant menu management system, REST API integrations, or data
@@ -32,33 +32,33 @@
   <div class=" w-full p-6 mb-10">
     <!-- services -->
     <div
-      class="w-full max-w-5xl mt-12 flex flex-col items-center mx-auto animate-fade animate-duration-[2000ms] animate-ease-in">
+      class="w-full max-w-7xl mt-12 flex flex-col items-center mx-auto animate-fade animate-duration-[2000ms] animate-ease-in">
       <h2 class="text-3xl font-bold mb-8">Services We Offer</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full items-stretch">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-6 w-full items-stretch">
         <div class="bg-base-100 card shadow-md h-full flex flex-col">
           <div class="card-body items-center text-center flex flex-col justify-center h-full">
             <img src="./images/software_engineer.svg" alt="Web App + SEO Icon" class="w-20 h-20 mb-3" />
-            <h3 class="card-title">Web App + SEO</h3>
+            <h3 class="card-title">Web App</h3>
             <p class="text-sm mt-2 ">
-              Need a robust website or application with SEO optimization?
-              We’ll help you rank higher and reach your audience.
+              You have idea and want to test your concept with smaller investment? We craft custom solutions with core
+              functionalities.
             </p>
           </div>
         </div>
         <div class="card bg-base-100 shadow-md h-full flex flex-col">
           <div class="card-body items-center text-center flex flex-col justify-center h-full">
             <img src="./images/design.svg" alt="Figma + Website Icon" class="w-20 h-20 mb-3" />
-            <h3 class="card-title">Figma + Website</h3>
+            <h3 class="card-title">Real time data streams</h3>
             <p class="text-sm mt-2">
-              From design mockups in Figma to a fully responsive site,
-              we turn ideas into visually striking, user-friendly sites.
+              You have idea and want to test your concept with smaller investment? We craft custom solutions with core
+              functionalities.
             </p>
           </div>
         </div>
         <div class="card bg-base-100 shadow-md h-full flex flex-col">
           <div class="card-body items-center text-center flex flex-col justify-center h-full">
             <img src="./images/server.svg" alt="Restaurant Menu System Icon" class="w-20 h-20 mb-3" />
-            <h3 class="card-title">Restaurant Menu System</h3>
+            <h3 class="card-title">SEO</h3>
             <p class="text-sm mt-2">
               Easily update menus and manage special offers,
               all in one mobile-friendly, streamlined web app for restaurants.
@@ -68,10 +68,18 @@
         <div class="card bg-base-100 shadow-md h-full flex flex-col">
           <div class="card-body items-center text-center flex flex-col justify-center h-full">
             <img src="./images/team.svg" alt="Complete Package Icon" class="w-20 h-20 mb-3" />
-            <h3 class="card-title">Complete Package</h3>
+            <h3 class="card-title">Design + Website</h3>
             <p class="text-sm mt-2">
-              Frontend, backend, design, and social media management.
-              We cover every aspect so you can focus on your business.
+              Frontend, backend, design. Or just a regular website? Landing page? Portfolio? We got you covered.
+            </p>
+          </div>
+        </div>
+        <div class="card bg-base-100 shadow-md h-full flex flex-col">
+          <div class="card-body items-center text-center flex flex-col justify-center h-full">
+            <img src="./images/team.svg" alt="Complete Package Icon" class="w-20 h-20 mb-3" />
+            <h3 class="card-title">Complete package</h3>
+            <p class="text-sm mt-2">
+              Frontend, backend, design, social media. Everything your business/project needs online.
             </p>
           </div>
         </div>
@@ -79,92 +87,95 @@
     </div>
   </div>
 
+
   <div class="w-full p-6 mt-0 flex flex-col justify-center items-center">
     <!-- technologies -->
-    <div class="w-full max-w-5xl mt-12 flex flex-col items-center">
+    <div class="w-full max-w-8xl mt-12 flex flex-col items-center">
       <h2 class="text-3xl font-bold mb-8 text-center">Technologies We Use</h2>
-      <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 justify-center place-items-center">
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center py-4">
-          <i class="fab fa-html5 text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">HTML5</span>
+      <div class="grid grid-cols-2 md:grid-cols-5 lg:grid-cols-5 gap-10 justify-center place-items-center">
+
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-html5 text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">HTML5</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-css3-alt text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">CSS3</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-css3-alt text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">CSS3</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-js text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">JavaScript</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-js text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">JavaScript</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-bootstrap text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Bootstrap</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-bootstrap text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Bootstrap</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-paint-brush text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Material UI</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-paint-brush text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Material UI</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-react text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">ReactJS</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-react text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">ReactJS</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-code text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Next.js</span>
+        <div class="card tech-card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-code text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Next.js</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-angular text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">AngularJS</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-angular text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">AngularJS</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-code text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">jQuery</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-code text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">jQuery</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-node text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Node.js</span>
+        <div class="card tech-card w-36 border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-node text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Node.js</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-server text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">ExpressJS</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-server text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">ExpressJS</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-file-code text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">JSON</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-file-code text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">JSON</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-npm text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">npm</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-npm text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">npm</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fab fa-php text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">PHP</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-php text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">PHP</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-database text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">MySQL</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-database text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">MySQL</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-cloud text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">DigitalOcean</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-cloud text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-lg">Digital Ocean</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-bolt text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Chakra UI</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-bolt text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Chakra UI</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-route text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">React Router</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-route text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-lg">React Router</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-wind text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Tailwind</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-wind text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Tailwind</span>
         </div>
-        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-          <i class="fas fa-star text-3xl mb-2 mt-2"></i>
-          <span class="font-medium">Daisy UI</span>
+        <div class="card tech-card w-36  border  shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-star text-4xl mb-2 mt-2"></i>
+          <span class="font-medium text-xl">Daisy UI</span>
         </div>
       </div>
     </div>
   </div>
+
 </div>
