--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <div class="w-full mb-10">
 
   <!-- horizon -->
-  <div class="flex flex-col-reverse lg:flex-row items-center max-w-4xl mx-auto gap-10 mt-20">
+  <section class="flex flex-col-reverse lg:flex-row items-center max-w-4xl mx-auto gap-10 mt-20">
     <!-- left banner intro -->
     <div class="w-full lg:w-1/2 text-center">
       <h1
@@ -25,10 +25,10 @@
       <img src="./images/hero3.png" alt="Hero Illustration"
         class="w-full max-w-[250px] sm:max-w-[300px] md:max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
     </div>
-  </div>
+  </section>
 
   <!-- services -->
-  <div class="w-full p-6 mb-10">
+  <section class="w-full p-6 mb-10">
     <div class="w-full max-w-7xl mt-12 mx-auto flex flex-col items-center
              animate-fade animate-duration-[2000ms] animate-ease-in">
       <h2 class="text-3xl font-bold mb-8">Services We Offer</h2>
@@ -94,11 +94,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-
-  <div class="w-full max-w-7xl mx-auto flex flex-wrap justify-center gap-6">
-    <!-- technologies -->
+  <!-- technologies -->
+  <section class="w-full max-w-7xl mx-auto flex flex-wrap justify-center gap-6">
     <div class="w-full max-w-5xl mt-12 flex flex-col items-center">
       <h2 class="text-3xl font-bold mb-8 text-center">Technologies We Use</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 justify-center place-items-center">
@@ -184,6 +183,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
 </div>
