--- a/projects.html
+++ b/projects.html
@@ -46,19 +46,15 @@
     </div>
 
     <div class="navbar-end">
-      <!-- Theme toggle switch -->
       <label class="swap swap-rotate">
-        <!-- hidden checkbox controls the state -->
         <input type="checkbox" class="theme-controller" value="black" />
-
-        <!-- Sun icon (light mode) -->
+        <!-- Sun icon  -->
         <svg class="swap-on w-8 h-8 sm:w-10 sm:h-10 fill-[#F5CF0A]" xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24">
           <path
             d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
         </svg>
-
-        <!-- Moon icon (dark mode) -->
+        <!-- Moon icon  -->
         <svg class="swap-off w-8 h-8 sm:w-10 sm:h-10 fill-black" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path
             d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
@@ -70,7 +66,7 @@
   <!-- main -->
 
   <!-- mvp approact -->
-  <div class="overflow-hidden py-1 sm:py-[30px] bg-base-100">
+  <section class="overflow-hidden py-1 sm:py-[30px] bg-base-100">
     <div class="mx-auto max-w-7xl px-1 lg:px-2">
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-2 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
         <div class="lg:pt-4 lg:pr-8">
@@ -141,7 +137,7 @@
         <!-- </div> -->
       </div>
     </div>
-  </div>
+  </section>
 
   <h2 class="text-5xl font-bold text-center py-10 animate-fade-left animate-once animate-duration-2000">
     some of our previous projects:
@@ -260,11 +256,11 @@
     </div>
   </section>
 
-  <div>
+  <!-- website design section -->
+  <section>
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
         <h2 class="text-2xl font-bold text-gray-900">Website design</h2>
-
         <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:space-y-0 lg:gap-x-6">
           <div class="group relative">
             <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/home-page-02-edition-01.jpg"
@@ -305,7 +301,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
   <footer class="py-4 text-center">
     <h2 class="text-lg">© 2025 Horizon. All rights reserved.</h2>
