website design info plus mockup

--- a/projects.html
+++ b/projects.html
@@ -263,40 +263,39 @@
         <h2 class="text-2xl font-bold text-gray-900">Website design</h2>
         <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:space-y-0 lg:gap-x-6">
           <div class="group relative">
-            <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/home-page-02-edition-01.jpg"
+            <img src="./images/website_mockup_1.png"
               alt="Desk with leather desk pad, walnut desk organizer, wireless keyboard and mouse, and porcelain mug."
               class="w-full rounded-lg bg-white object-cover group-hover:opacity-75 max-sm:h-80 sm:aspect-2/1 lg:aspect-square">
             <h3 class="mt-6 text-sm text-gray-500">
               <a href="#">
                 <span class="absolute inset-0"></span>
-                Desk and Office
+                TAILWIND + HTML + JAVASCRIPT
               </a>
             </h3>
-            <p class="text-base font-semibold text-gray-900">Work from home accessories</p>
+            <p class="text-base font-semibold text-gray-900">APP WEBSITE</p>
           </div>
           <div class="group relative">
-            <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/home-page-02-edition-02.jpg"
+            <img src="./images/website_mockup_2.png"
               alt="Wood table with porcelain mug, leather journal, brass pen, leather key ring, and a houseplant."
               class="w-full rounded-lg bg-white object-cover group-hover:opacity-75 max-sm:h-80 sm:aspect-2/1 lg:aspect-square">
             <h3 class="mt-6 text-sm text-gray-500">
               <a href="#">
                 <span class="absolute inset-0"></span>
-                Self-Improvement
+                BOOTSTRAP + HTML + JAVASCRIPT (jQuery)
               </a>
             </h3>
-            <p class="text-base font-semibold text-gray-900">Journals and note-taking</p>
+            <p class="text-base font-semibold text-gray-900">CONSTRUCTION BUSINESS WEBSITE</p>
           </div>
           <div class="group relative">
-            <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/home-page-02-edition-03.jpg"
-              alt="Collection of four insulated travel bottles on wooden shelf."
+            <img src="./images/website_mockup_3.png" alt="Collection of four insulated travel bottles on wooden shelf."
               class="w-full rounded-lg bg-white object-cover group-hover:opacity-75 max-sm:h-80 sm:aspect-2/1 lg:aspect-square">
             <h3 class="mt-6 text-sm text-gray-500">
               <a href="#">
                 <span class="absolute inset-0"></span>
-                Travel
+                REACT + CHAKRA UI
               </a>
             </h3>
-            <p class="text-base font-semibold text-gray-900">Daily commute essentials</p>
+            <p class="text-base font-semibold text-gray-900">BARBERSHOP WEBSITE</p>
           </div>
         </div>
       </div>
