--- a/homepage.html
+++ b/homepage.html
@@ -164,7 +164,7 @@
         <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
           <i class="fas fa-cloud text-3xl mb-2 mt-2" aria-hidden="true"></i>
           <span class="font-medium">DigitalOcean</span>
-        </div> ./input.css
+        </div>
         <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
           <i class="fas fa-bolt text-3xl mb-2 mt-2" aria-hidden="true"></i>
           <span class="font-medium">Chakra UI</span>
